projetGL/src/test/deca/extension/context/invalid/test_invalid_comp_matrix.deca
{
    float[][] matrix= [[1.1, 1.2, 1.3], [2.1, 2.2, 2.3], [3.1, 3.2, 3.3]];
    float[]sous_matrix=matrix[0];
    if(sous_matrix<matrix){
        
    }
}